1.8.1: if given tuples, returns tuples (instead of lists).
       test for numpy arrays first.
       build directly from .pyx file if USE_PYREX set and Pyrex installed.
       Fixed error in docstring example.
       README.html contains html docstrings generated by pydoc.
1.8.0: Better error handling Proj.__init__.
       Added optional keyword 'errcheck' to __call__ method. 
       If True, an exception is raised if the transformation is invalid.
1.7.3: python 2.5 support.