@@ -3,6 +3,8 @@
        build directly from .pyx file if USE_PYREX set and Pyrex installed.
        Fixed error in docstring example.
        README.html contains html docstrings generated by pydoc.
+       added a python module which is a wrapper around C functions.
+	   docstring examples now executed to doctest when 'pyproj.test()' is run.
 1.8.0: Better error handling Proj.__init__.
        Added optional keyword 'errcheck' to __call__ method. 
        If True, an exception is raised if the transformation is invalid.
